@@ -12,7 +12,7 @@ Homepage: http://www.globus.org/
 Package: libglobus-gridftp-server6
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglobus-xio-gsi-driver
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglobus-xio-gsi-driver0
 Description: Globus Toolkit - Globus GridFTP Server
  The Globus Toolkit is an open source software toolkit used for
  building Grid systems and applications. It is being developed by the
@@ -26,7 +26,7 @@ Description: Globus Toolkit - Globus GridFTP Server
 Package: globus-gridftp-server-progs
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libglobus-xio-gsi-driver, libglobus-xio-udt-driver
+Depends: ${shlibs:Depends}, ${misc:Depends}, libglobus-xio-gsi-driver0, libglobus-xio-udt-driver0
 Description: Globus Toolkit - Globus GridFTP Server Programs
  The Globus Toolkit is an open source software toolkit used for
  building Grid systems and applications. It is being developed by the
