@@ -1,3 +1,9 @@
+globus-gridftp-server (9.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * update manpage for -encrypt-data
+
+ -- Globus Toolkit <support@globus.org>  Tue, 15 Mar 2016 09:34:39 -0400
+
 globus-gridftp-server (9.4-1+gt6.@distro@) @distro@; urgency=low
 
   * fix mem error when sharing
